k8s/cudnn/nginx-server.yaml
# nginx-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cudnn-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cudnn-server
  template:
    metadata:
      labels:
        app: cudnn-server
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: cudnn-storage
            - name: nginx-cache
              mountPath: /var/cache/nginx
      volumes:
        - name: cudnn-storage
          persistentVolumeClaim:
            claimName: cudnn-pvc
        - name: nginx-cache
          emptyDir: {}
