k8s/cudnn/cudnn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cudnn-nginx-svc
spec:
  selector:
    app: cudnn-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
