k8s/cudnn/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cudnn-nginx-svc
spec:
  selector:
    app: cudnn-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
